--- a/style.css
+++ b/style.css
@@ -218,6 +218,13 @@ main > .featured-text-container p {
         align-items: center;
     }
 
+    .sidebar-gdl {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 10000px;
+    }
+
     .main-menu {
         display: flex;
         justify-content: space-between;
@@ -244,9 +251,29 @@ main > .featured-text-container p {
         max-width: 70%;;
     }
 
+    main > featured-text-container-contact {
+        max-width: 70%;
+    }
+
 }
 
-.featured-text-container hi {
+.featured-text-container-label {
+    font-family: "Playfair Display", serif;
+    font-size: 1.2rem;
+    margin: 0.5rem 0 1.5rem;
+    width: 100%;
+    text-align: center;
+}
+
+.featured-text-container-contact{
+    font-family: "Playfair Display", serif;
+    font-size: 1.2rem;
+    margin: 0.5rem 0 1.5rem;
+    width: 100%;
+    text-align: center;
+}
+
+.featured-text-container h1 {
     margin: 0.5rem 1rem;
     font-size: 1.4rem;   
 }
@@ -293,6 +320,9 @@ footer {
         content: "";
         z-index: -1;
         opacity: 0.2;
+    
     }
+
+
     
 }
